syntax = "proto3";

option go_package = "rpc";

import "msg.proto";
import "action.proto";
import "notification.proto";
import "common.proto";

package rpc;

service SocketService {
    rpc SendMessage (Message) returns (Int32);
    rpc SendNotification (Notification) returns (Int32);
    rpc SendAction (Action) returns (Int32);
    rpc SendKickoff (Text) returns (Empty);
}
